# xfce4-cddrive-plugin

./: ChangeLog  NEWS  README  acinclude.m4  configure.in.in
panel-plugin/: Makefile  Makefile.am  cddrive-audio.c  cddrive-audio.h  cddrive-cddb.c  cddrive-cddb.h  cddrive-dialogs.c  cddrive-dialogs.h  cddrive-error.c  cddrive-error.h  cddrive-monitor-private.h  cddrive-monitor.c  cddrive-monitor.h  cddrive.c  cddrive.desktop.in.in  cddrive.h
panel-plugin/os-dependant/: cddrive-cdrom.c  cddrive-cdrom.h  cddrive-process.c  cddrive-process.h
po/: ChangeLog  LINGUAS  ar.po  ast.po  ca.po  cs.po  de.po  el.po  es.po  eu.po  fr.po  gl.po  hr.po  hu.po  it.po  kk.po  ko.po  lt.po  lv.po  nl.po  nn.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  ug.po  uk.po  ur_PK.po  xfce4-cddrive-plugin.pot  zh_CN.po  zh_TW.po
